--- a/notebooks/01_Image_Formation.ipynb
+++ b/notebooks/01_Image_Formation.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "[.025, .0125]"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "[340, 250]"
    ]
   },
   {
@@ -95,7 +95,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "[[40, 0,  320],\n",
+    " [0,  40, 240],\n",
+    " [0,  0,  1  ]]"
    ]
   },
   {
@@ -120,12 +122,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your code here"
+    "(T_w^c)(PI_0)= \n",
+    "[[1, 0, 0, 0 ],\n",
+    " [0, 1, 0, 0 ],\n",
+    " [0, 0, 1, 10]]\n",
+    "\n",
+    "p_w^~ =\n",
+    "[2,\n",
+    " 3,\n",
+    " 50,\n",
+    " 1 ]\n",
+    "\n",
+    "(K)(T_w^c)(PI_0)(p_w^~)=\n",
+    "[19280,\n",
+    " 14520,\n",
+    " 60   ]\n",
+    "\n",
+    "u^I = 19280/60 = 321.333\n",
+    "v^I = 14520/60 = 242"
    ]
   },
   {
@@ -155,7 +172,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "r^2 = (u^I_dist - o_x)^2 + (v^I_dist = o_y)^2= 18500\n",
+    "\n",
+    "u^I = (1 + a_1*r^2 + a_2*(r^2)^2)(u^I_dist - o_x) + o_x = 6024\n",
+    "v^I = (1 + a_1*r^2 + a_2*(r^2)^2)(v^I_dist - o_y) + o_y = 8083"
    ]
   }
  ],
