--- a/notebooks/03_LinearRegression.ipynb
+++ b/notebooks/03_LinearRegression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,49 +539,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_inliers(m, b, shape):\n",
     "    xmax, ymax = shape\n",
     "    \n",
-    "    if b > ymax:\n",
-    "        y1 = ymax\n",
-    "    elif b < 0:\n",
-    "        y1 = 0\n",
-    "    else:\n",
-    "        y1 = b\n",
+    "    y1 = np.clip(b, 0, ymax)\n",
+    "     \n",
     "    x1 = (y1 - b)/m\n",
     "    \n",
-    "    if x1 > xmax:\n",
-    "        x1 = xmax\n",
-    "    elif x1 < 0:\n",
-    "        x1 = 0\n",
-    "    y1 = m*x1 + b\n",
+    "    x1 = np.clip(x1, 0, xmax)\n",
     "    \n",
-    "    ytemp = m*xmax + b\n",
-    "    if ytemp > ymax:\n",
-    "        y2 = ymax\n",
-    "    elif ytemp < 0:\n",
-    "        y2 = 0\n",
-    "    else:\n",
-    "        y2 = ytemp\n",
+    "    y1 = m*x1 + b\n",
+    "\n",
+    "\n",
+    "    y2 = np.clip(m*xmax + b, 0, ymax)\n",
+    "    \n",
     "    x2 = (y2 - b)/m\n",
     "    \n",
-    "    if x2 > xmax:\n",
-    "        x2 = xmax\n",
-    "    elif x2 < 0:\n",
-    "        x2 = 0\n",
+    "    x2 = np.clip(x2, 0, xmax)\n",
+    "    \n",
     "    y2 = m*x2 + b\n",
-    "\n",
     "    \n",
     "    return x1, y1, x2, y2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -595,10 +582,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x782f08973500>"
+       "<matplotlib.image.AxesImage at 0x73d098fcfef0>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -626,26 +613,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "61.858039014661095\n",
+      "145.99999999999986\n",
+      "61.10396178558694\n"
+     ]
+    }
+   ],
    "source": [
     "m,b = calculate_regression(np.argwhere(star))\n",
-    "x1, y1, x2, y2 = find_inliers(m,b, star.shape)"
+    "x1, y1, x2, y2 = find_inliers(m,b, star.shape)\n",
+    "print(x1)\n",
+    "print(y1)\n",
+    "print(x2)\n",
+    "print(y2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x782f15ccc410>"
+       "<matplotlib.lines.Line2D at 0x73d08d7a9ac0>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -790,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
